--- a/experiment3.html
+++ b/experiment3.html
@@ -22,7 +22,7 @@
 <td rowspan="3">Physics</td>
 <td>Break</td>
 <td colspan="2">Computer Lab</td>
-<td>Sport</td>
+<td>sport</td>
 </tr>
 <tr>
 <td>Tuesday</td>
