--- a/experiment1.html
+++ b/experiment1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Course Curriculum</title>
+<title>Course-Curriculum</title>
 </head>
 <body style="border: 1px solid black; padding: 10px; width: 60%; margin: auto;">
 <h2>Introduction</h2>
