--- a/experiment1.html
+++ b/experiment1.html
@@ -10,7 +10,7 @@ This page demonstrates the use of <i>HTML formatting</i>,
 <i>lists</i>, and special characters such as &copy;, &lt;, &gt;.</p>
 <h3>Semester 1 Subjects (Ordered List)</h3>
 <ol>
-<li>Mathematics I</li>
+<li>Mathematics 1</li>
 <li>Computer Fundamentals</li>
 <li>Programming in C</li>
 <li>Electronics Basics</li>
