--- a/experiment 5.html
+++ b/experiment 5.html
@@ -46,7 +46,7 @@ margin: 20px 0;
 </style>
 </head>
 <body>
- <h2>Student Registration Form</h2>
+ <h2>Student-Registration Form</h2>
 <hr>
  <form action="#" method="post">
 <label for="name">Full Name:</label>
