--- a/experiment 4.html
+++ b/experiment 4.html
@@ -20,7 +20,7 @@ padding:20px;">
 <label for="room">Room Type:</label>
 <select id="room" name="room">
 <option value="single">Single Room</option>
-<option value="double">Double Room</option>
+<option value="double">Double room</option>
 <option value="suite">Suite</option>
 </select><br><br>
 <label for="guests">Number of Guests:</label>
